--- a/LA CTF 2024/Makefile
+++ b/LA CTF 2024/Makefile
@@ -1,5 +1,5 @@
 debian-pwn:
-	docker run -i -v "`pwd`:/chal" -t debian-pwn
+	docker run -it --rm -v "`pwd`:/chal" -t debian-pwn /bin/bash
 
 ubuntu-pwn:
-	docker run -i -v "`pwd`:/chal" -t debian-pwn
+	docker run -it --rm -v "`pwd`:/chal" -t ubuntu-pwn /bin/bash
